# smtp-grampar

./: README.md  docker-compose.yml  run_echo_query.py  setup.cfg
diff_queries/: 03  04  09  12  14  15
images/echo/: server.py
images/james-maildir/: .gitignore  start-james.sh
images/james-maildir/conf/: domainlist.xml
images/smtp-garden-soil/: Dockerfile  in-container-action.py
src/smtpfuzz/: config.py  dfa_driver.py  fuzz.py  grampar_driver.py  grid.py  io.py  utils.py
testcases/echo-tweak/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  101.txt  102.txt  103.txt  201.txt  202.txt  203.txt  204.txt  206.txt  207.txt  208.txt  209.txt  210.txt  211.txt  212.txt  214.txt  216.txt  217.txt  219.txt  222.txt  223.txt  801.txt  901.txt
