[metadata]
name = smtpfuzz
version = 0.0.1
description = Fuzzing SMTP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kenballus/smtp-garden

[options]
packages = find:
install_requires =
    setuptools==78.1.0
    asttokens==3.0.0
    certifi==2025.1.31
    charset-normalizer==3.4.1
    decorator==5.2.1
    docker==7.1.0
    executing==2.2.0
    idna==3.10
    ipython==9.0.2
    ipython_pygments_lexers==1.1.1
    jedi==0.19.2
    loguru==0.7.3
    MarkupSafe==3.0.2
    matplotlib-inline==0.1.7
    networkx==3.4.2
    parso==0.8.4
    pexpect==4.9.0
    prompt_toolkit==3.0.50
    ptyprocess==0.7.0
    pure_eval==0.2.3
    pydot==3.0.4
    Pygments==2.19.1
    pyparsing==3.2.1
    requests==2.32.3
    stack-data==0.6.3
    traitlets==5.14.3
    urllib3==2.4.0
    wcwidth==0.2.13

python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src

